# duktape-java

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  settings.gradle
buildSrc/: build.gradle
buildSrc/src/main/java/org/duktape/duktapejava/generator/: APIParser.java  Define.java  DefineParser.java  DuktapeFunction.java  Generator.java  Prototype.java  Util.java
buildSrc/src/main/resources/: default_code.txt
gradle/wrapper/: gradle-wrapper.properties
src/main/c/: cache.cc  cache.h  duk-array.cc  duk-array.h  duk-buffer.cc  duk-buffer.h  duk-error.cc  duk-error.h  duk-function.cc  duk-function.h  duk-java-function.cc  duk-java-function.h  duk-memory-allocator.cc  duk-memory-allocator.h  duk-object.cc  duk-object.h  duk-referenced-value.cc  duk-user-data.h  duktape-java.c  duktape-java.cc  duktape-java.h  duktape.h  helper.c  helper.cc  helper.h  memoryinfo.cc  native-helper.cc  native-helper.h  objectwrapper.cc  refs.cc  refs.h
src/main/c/include/: cache.h  creator.h  duk-array.h  duk-buffer.h  duk-error.h  duk-function.h  duk-java-function.h  duk-object.h  duk-referenced-value.h  duktape-java.h  duktape.h  duktape_user_data.h  helper.h  memoryinfo.h  method.h  native-helper.h  objectwrapper.h  refs.h
src/main/java/at/renehollander/duktape/: Benchmark.java  Destroyable.java  Duktape.java  Function.java  Main.java  NativeHelper.java  TestObject.java
src/main/java/at/renehollander/duktape/annotation/: ExposeToJavascript.java
src/main/java/at/renehollander/duktape/error/: FatalErrorHandler.java
src/main/java/at/renehollander/duktape/exception/: WrongValueTypeException.java
src/main/java/at/renehollander/duktape/util/: FatalErrorHandler.java  Function.java  NativeHelper.java
src/main/java/at/renehollander/duktape/value/: AbstractDukValue.java  Destroyable.java  DukValue.java
src/main/java/at/renehollander/duktape/value/object/: AbstractDukReferencedValue.java  DukArray.java  DukBuffer.java  DukError.java  DukFunction.java  DukJavaFunction.java  DukObject.java  DukReferencedValue.java
src/main/java/at/renehollander/duktape/value/primitive/: DukBoolean.java  DukNull.java  DukNumber.java  DukString.java  DukUndefined.java
src/main/java/at/renehollander/duktape/values/: AbstractDukReferencedValue.java  AbstractDukValue.java  Creator.java  DukArray.java  DukBoolean.java  DukBuffer.java  DukError.java  DukFunction.java  DukJavaFunction.java  DukNull.java  DukNumber.java  DukObject.java  DukReferencedValue.java  DukString.java  DukUndefined.java  DukValue.java  WrongValueTypeException.java
src/main/java/org/duktape/duktapejava/: Example.java  FunctionInterface.java  LibraryLoader.java
src/test/java/at/renehollander/duktape/: DuktapeTest.java
src/test/java/org/duktape/duktapejava/test/: TestCreateAndDestroy.java  TestJavaFunction.java
src/test/java/test/at/renehollander/duktape/: DukObjectTest.java  DuktapeTest.java
